# pokemon_red_terminal

./: .gitignore  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  build.bat  build_check.bat
BACKUP/2026-05-17_v3/src/data/: map_data.h  pokemon_data.h  sprites.h  tiles.h  type_chart.h
BACKUP/2026-05-17_v3/src/engine/: renderer.h
BACKUP/2026-05-17_v3/tools/: bake_assets.py  fetch_assets.py  fix_walkability.py  gen_overworld_tiles.py  gen_overworld_tiles_v2.py  gen_overworld_tiles_v3.py  gen_pokecenter_tiles.py  gen_sprites.py  patch_wall_tile.py
pokered_assets/: pokemon_palettes.json
pokered_assets/maps/: OaksLab.json  PalletTown.json  PewterCity.json  PewterGym.json  RedsHouse1F.json  Route1.json  Route2.json  ViridianCity.json  ViridianForest.json
src/: main.cpp
src/data/: map_data.h  pokemon_data.h  sprites.h  tiles.h  type_chart.h
src/engine/: audio.cpp  audio.h  input.cpp  input.h  renderer.cpp  renderer.h
src/game/: battle.cpp  battle.h  game.cpp  game.h  overworld.cpp  overworld.h  player.h
tools/: gen_gate_forest_tiles.py  gen_intro_assets.py  gen_maps.py  gen_npc_walk.py  gen_oaklab_tiles.py  gen_overworld_tiles.py  gen_pewter_gym_tiles.py  gen_pokecenter_mart_tiles.py  gen_sprites.py  gen_tiles.py  patch_broken_tiles.py  synth_audio.py
가이드 문서/: BEGINNER_GUIDE.md  CHANGELOG.md  DESIGN.md  NPC_GUIDE.md  README.md  TEAM_HANDOFF.md  목차.md
가이드 문서/NPC_트레이너/: NPC_추가_가이드.md  원본_레퍼런스.md
가이드 문서/시스템_구현/: NPC_이벤트.md  아이템_연동.md  인게임_메뉴.md
가이드 문서/팀_관리/: 변경_이력.md  인수인계.md
가이드 문서/프로젝트_총괄/: 빌드_실행.md  중간_보고서.md  프로젝트_개요.md
(+4 files in other folders)
